[package]
name = "aws-ssm-parameter-cache"
description = "A client for in-process caching of parameters from AWS SSM"
version = "0.1.0"
authors = ["Adam Quigley", "Martin Bartlett"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/bassmanitram/aws-ssm-parameter-cache-rust"
repository = "https://github.com/bassmanitram/aws-ssm-parameter-cache-rust"
readme = "README.md"
keywords = ["aws", "aws-ssm", "aws-sdk-rust", "LRU", "cache"]
categories = ["caching"]

[dependencies]
aws-config = "0.57"
aws-sdk-config = "0.36"
aws-sdk-ssm = "0.36"
lru = "0.12.0"

[dev-dependencies]
lazy_static = "1.4.0"
async_once = "0.2.6"
tokio = { version = "1.33.0", features = ["full"] }
